fixed redudent / erroneous flex properties allowing SVGs to display on safari, changed spacing on carousel to look better on mobile devices

--- a/src/components/skills.module.scss
+++ b/src/components/skills.module.scss
@@ -7,10 +7,12 @@
 
 .svg-wrapper {
   display: flex;
-  height: 100%;
+  margin: auto;
   width: 20%;
 
-  & > * {
+  svg {
+    box-sizing: border-box;
+    fill: #000;
     height: 100%;
     margin: auto;
   }
@@ -22,13 +24,16 @@
   font-family: 'Raleway', sans-serif;
   font-size: .9em;
 
-  svg {
-    fill: #000;
-  }
-
   p {
     margin: auto;
     width: 80%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .svg-wrapper svg {
+    flex: 1 0;
+    max-width: 50px;
   }
 }
 
@@ -40,9 +45,8 @@
   .skill-container {
     margin: 0;
     min-height: 80px;
-
-    svg {
-      height: 70%;
-    }
+  }
+  .svg-wrapper {
+    height: 70%;
   }
 }
