--- a/src/components/testimonials.module.scss
+++ b/src/components/testimonials.module.scss
@@ -1,9 +1,8 @@
 .carousel-item {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
   font-family: 'Raleway', sans-serif;
-  padding: 3em 2em;
+  padding: 1em 2em;
   width: 100%;
 
   div {
@@ -17,10 +16,9 @@
   img {
     flex-grow: .75;
     margin: auto;
-    max-width: 328px;
     object-fit: contain;
     padding-bottom: 1.5em;
-    width: 40%;
+    width: 100%;
   }
 
   .author {
@@ -35,21 +33,20 @@ span.underline {
 }
 
 @media screen and (min-width: 768px) {
-  .carousel-item p {
-    font-size: 1em;
-  }
-}
-
-@media screen and (min-width: 768px) {
   .carousel-item {
-    flex-wrap: nowrap;
-    padding: 3em 5em;
+    flex-direction: row;
+    padding: 1em 5em;
 
     img {
-      flex-direction: column;
       margin-left: auto;
+      max-width: 328px;
       order: 2;
       padding: 0 0 0 2em;
+      width: 40%;
+    }
+
+    p {
+      font-size: 1em;
     }
   }
 }
