--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -44,6 +44,7 @@ section {
 }
 
 .flickity-enabled {
+  margin-top: 0;
   position: relative;
 }
 
@@ -52,15 +53,7 @@ section {
 }
 
 .flickity-viewport {
-  height: 100%;
   overflow: hidden;
-  position: relative;
-}
-
-.flickity-slider {
-  height: 100%;
-  position: absolute;
-  width: 100%;
 }
 
 /* draggable */
